--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,11 +1,11 @@
 buildscript {
-    ext.kotlin_version = '1.6.10'
+    ext.kotlin_version = '1.4.0'
     repositories {
+//        mavenCentral()
         maven { url 'https://maven.aliyun.com/repository/public' }//jcenter
         maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }//gradle-plugin
         maven { url 'https://maven.aliyun.com/repository/central' }//central
-        maven { url 'https://maven.aliyun.com/repository/google' }//google        google()
-        mavenCentral()
+        maven { url 'https://maven.aliyun.com/repository/google' }//google
     }
 
     dependencies {
@@ -16,11 +16,11 @@ buildscript {
 
 allprojects {
     repositories {
+//        mavenCentral()
         maven { url 'https://maven.aliyun.com/repository/public' }//jcenter
         maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }//gradle-plugin
         maven { url 'https://maven.aliyun.com/repository/central' }//central
-        maven { url 'https://maven.aliyun.com/repository/google' }//google        google()
-        mavenCentral()
+        maven { url 'https://maven.aliyun.com/repository/google' }//google
     }
 }
 
