--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dev_dependencies:
   lottie: ^1.2.1
   # 刷新加载框架
   pull_to_refresh: ^2.0.0
+  # 屏幕适配
+  flutter_screenutil: ^5.0.1
 
 # The following section is specific to Flutter.
 flutter:
