--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,8 @@ dev_dependencies:
   # Banner  这个库， 完全根据https://github.com/jzoom/flutter_swiper 使用方式，跟原作者一样 修改的空安全，兼容2.0
   #  flutter_swiper: ^1.1.6
   flutter_swiper_null_safety: ^1.0.2
+  # logger
+  logger: ^1.1.0
 
 # The following section is specific to Flutter.
 flutter:
