--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }//gradle-plugin
         maven { url 'https://maven.aliyun.com/repository/central' }//central
         maven { url 'https://maven.aliyun.com/repository/google' }//google
+        mavenCentral()
     }
 
     dependencies {
@@ -21,6 +22,7 @@ allprojects {
         maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }//gradle-plugin
         maven { url 'https://maven.aliyun.com/repository/central' }//central
         maven { url 'https://maven.aliyun.com/repository/google' }//google
+        mavenCentral()
     }
 }
 
