--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,10 @@ dev_dependencies:
   flutter_swiper_null_safety: ^1.0.2
   # logger
   logger: ^1.1.0
+  # 图片缓存框架
+  cached_network_image: ^3.2.0
+
+  like_button: ^2.0.5
 
 # The following section is specific to Flutter.
 flutter:
@@ -113,3 +117,6 @@ flutter:
   # see https://flutter.dev/custom-fonts/#from-packages
   assets:
     - images/
+    - assets/
+    - assets/lottie/
+    - assets/svg/
