--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,38 +44,39 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
 
   # For information on the generic Dart part of this file, see the
   # following page: https://dart.dev/tools/pub/pubspec
   # api request
-  dio: ^4.0.4
-  pretty_dio_logger: ^1.1.1
+  dio: ^5.1.1
+  pretty_dio_logger: ^1.3.1
   # loading
-  flutter_easyloading: ^3.0.3
+  flutter_easyloading: ^3.0.5
   # GetX 是 Flutter 上的一个轻量且强大的解决方案：高性能的状态管理、智能的依赖注入和便捷的路由管理  State Manager、Navigation Manager
-  get: ^4.5.1
+  get: ^4.6.5
   # 网络检测
-  connectivity_plus: ^2.1.0
+  connectivity_plus: ^3.0.6
   # 骨架屏
   shimmer: ^2.0.0
   # Lottie动画
-  lottie: ^1.2.1
+  lottie: ^2.3.2
   # 刷新加载框架
   pull_to_refresh: ^2.0.0
   # 屏幕适配
-  flutter_screenutil: ^5.0.1
+  flutter_screenutil: ^5.7.0
   # fluttertoast插件依赖原生
-  fluttertoast: ^8.0.8
+  fluttertoast: ^8.2.1
   # Banner  这个库， 完全根据https://github.com/jzoom/flutter_swiper 使用方式，跟原作者一样 修改的空安全，兼容2.0
   #  flutter_swiper: ^1.1.6
   flutter_swiper_null_safety: ^1.0.2
   # logger
-  logger: ^1.1.0
+  logger: ^1.3.0
   # 图片缓存框架
-  cached_network_image: ^3.2.0
+  cached_network_image: ^3.2.3
 
   like_button: ^2.0.5
+  flutter_staggered_grid_view: ^0.6.2
 
 # The following section is specific to Flutter.
 flutter:
